fix: update education section with additional details

--- a/index.html
+++ b/index.html
@@ -107,9 +107,10 @@
       <section id="education">
         <h2>Education & Training</h2>
         <ul>
-          <li>Computer Science - University of London (2020-Present)</li>
-          <li>Google IT Support Certificate - Google (2020)</li>
-          <li>3D for Visual Effects - Escape Studios (2017)</li>
+          <li>Computer Science - University of London</li>
+          <li>FreeCodeCamp - Self-Paced Coding Bootcamp</li>
+          <li>Google IT Support Certificate - Google</li>
+          <li>3D for Visual Effects - Escape Studios</li>
         </ul>
       </section>
 
